@@ -1,3 +1,9 @@
+2008-05-21  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
+    * src/lib/FileStoragePolicy.cpp (updateFile)
+
+    Remove broken conversion code.
+
 2008-05-20  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
     * src/lib/TextureTile.cpp (loadRawTile)
